--- a/Water_Environment/Views/ActivitiesNews/Content.cshtml
+++ b/Water_Environment/Views/ActivitiesNews/Content.cshtml
@@ -5,8 +5,67 @@
 }
 
 <div class="container">
-    @Html.Raw(Model.Content))
-</div>
-@*<div class="container text-center">
     @Html.Raw(Model.Content)
-</div>*@
+     
+</div>
+<section style="background-color: #eee;">
+    <div class="container my-5 py-5">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-12 col-lg-10 col-xl-8">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex flex-start align-items-center">
+                            <img class="rounded-circle shadow-1-strong me-3"
+                                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQz6QZuuPYIqG74Zo2v21Q5wqB62qeaC2sO6LnNabKfRd24sNDFvd19xkWODiXJArA3uqM&usqp=CAU" alt="avatar" width="60"
+                                 height="60" />
+                            <div>
+                                <h6 class="fw-bold text-primary mb-1">Amiel_39</h6>
+                                <p class="text-muted small mb-0">
+                                    Shared publicly - Jan 2023
+                                </p>
+                            </div>
+                        </div>
+
+                        <p class="mt-3 mb-4 pb-2">
+                              Bài viết rất tuyệt vời và rất cần thiết trong bối cảnh biến đổi khí hậu và các vấn đề môi trường đang ngày càng trở nên nghiêm trọng. Điều tôi thích nhất về bài viết này là cách nó tập trung vào
+                              việc hành động cụ thể.
+                        </p>
+                    </div>
+                    <div class="card-body">
+                        <div class="d-flex flex-start align-items-center">
+                            <img class="rounded-circle shadow-1-strong me-3"
+                                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/OOjs_UI_icon_userAvatar-progressive.svg/1024px-OOjs_UI_icon_userAvatar-progressive.svg.png" alt="avatar" width="60"
+                                 height="60" />
+                            <div>
+                                <h6 class="fw-bold text-primary mb-1">Mungnek</h6>
+                                <p class="text-muted small mb-0">
+                                    Shared publicly - Octer 2023
+                                </p>
+                            </div>
+                        </div>
+
+                        <p class="mt-3 mb-4 pb-2">
+                            Tôi rất ấn tượng bởi việc nhấn mạnh về sự cần thiết của việc tiết kiệm năng lượng và sử dụng nguồn năng lượng tái tạo. Điều này đang trở thành một phần quan trọng trong cuộc sống hàng ngày của chúng ta. Hơn nữa, việc kêu gọi những thay đổi nhỏ trong cuộc sống hàng ngày của mỗi người cũng là một phần quan trọng của giải pháp.
+                        </p>
+                    </div>
+                    <div class="card-footer py-3 border-0" style="background-color: #f8f9fa;">
+                        <div class="d-flex flex-start w-100">
+                            <img class="rounded-circle shadow-1-strong me-3"
+                                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/User-avatar.svg/800px-User-avatar.svg.png" alt="avatar" width="60"
+                                 height="40" />
+                            <div class="form-outline w-100">
+                                <textarea class="form-control" id="textAreaExample" rows="4"
+                                          style="background: #fff;"></textarea>
+                                <label class="form-label" for="textAreaExample">Message</label>
+                            </div>
+                        </div>
+                        <div class="float-end mt-2 pt-1">
+                            <button type="button" class="btn btn-primary btn-sm">Post comment</button>
+                            <button type="button" class="btn btn-outline-primary btn-sm">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
