--- a/Water_Environment/Views/Admin/CreateActivitiesNews.cshtml
+++ b/Water_Environment/Views/Admin/CreateActivitiesNews.cshtml
@@ -13,6 +13,10 @@
             <input type="text" class="form-control" id="new-title">
         </div>
         <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Mô tả ngắn</label>
+            <input type="text" class="form-control" id="new-short-desc" />
+        </div>
+        <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Loại bài viết</label>
             @*<input type="text" class="form-control" name="Title" value="@Model.Title">*@
             <select class="form-select" aria-label="Default select example" id="new-category">
@@ -21,6 +25,13 @@
                     <option value="@item.id">@item.Name</option>
                 }
             </select>
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Hình ảnh</label>
+            <div style=" width: 100%; height: 250px; align-items: center }">
+                <img src="@Url.Content(Model.activitiesAndNew.Img)" style=" max-width: 100%; max-height: 100%; }" id="previewImg" />
+                <input type="file" id="imageFile" name="imageFile" onchange="ChangeImage(this, document.getElementById('previewImg'))"
+            </div>
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Nội dung bài viết</label>
@@ -38,35 +49,30 @@
 </div>
 
 
-<script>
-    function sanitize(input) {
-        // Replace or remove potentially dangerous characters and content
-        var sanitizedInput = input.replace(/<script>/gi, ''); // Remove script tags
-        sanitizedInput = sanitizedInput.replace(/<.*?script.*?>/gi, ''); // Remove anything that resembles a script tag
-        // You can add more sanitization rules as needed
-
-        return sanitizedInput;
-    }
+<script> 
     function SaveInfo() {
         var editorContent = tinymce.get('editor').getContent();
         var categoryId = $("#new-category").val();
+        var desc = $("#new-short-desc").val();
         var title = $("#new-title").val();
-        if (editorContent == '' || title == '' || categoryId == '') {
+        if (editorContent == '' || title == '' || categoryId == '' || desc == '') {
             alert('Vui lòng nhập đủ thông tin');
             return;
         }
-        //var encodedEditorContent = $('<div />').text(editorContent).html();
+        var formData = new FormData();
+         formData.append("Title", title);
+         formData.append("CategoryId", categoryId);
+         formData.append("Content", editorContent);
+         formData.append("ShortDescription", desc);
+         formData.append("UploadImage", $("#imageFile")[0].files[0]);
         $.ajax({
             url: '/Admin/AddActivitiesNews',
             type: 'POST',
-            dataType: 'text',
-            data: {
-                Title: title,
-                CategoryId: categoryId,
-                Content: editorContent
-            }
-        }).done(function (result) {
-            var rsJson = JSON.parse(result);
+            processData: false,
+            contentType: false,
+            data: formData,
+        }).done(function (rsJson) {
+            //var rsJson = JSON.parse(result);
             if (rsJson.Success == true) {
                 alert(rsJson.Message);
                 window.location.href = '/Admin/ManageActivitiesNews'
@@ -78,7 +84,16 @@
             }
         });
     }
+    function ChangeImage(UploadImage, previewImg) {
+        if (UploadImage.files && UploadImage.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                $(previewImg).attr('src', e.target.result);
 
+            }
+            reader.readAsDataURL(UploadImage.files[0]);
+        }
+    }
 
 </script>
 
