--- a/Water_Environment/Views/Home/Index.cshtml
+++ b/Water_Environment/Views/Home/Index.cshtml
@@ -1,114 +1,104 @@
-﻿@model IEnumerable<Water_Environment.Models.Home.CategoryContent>
+﻿@model Water_Environment.Models.Home.NewAndActivitiesHome
 
 @{
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
- 
 
-    @* Body *@
-    <div class="banner">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="~/Images/beach_img_1.jpg" alt="Image of Bannner" />
-                </div>
-                <div class="carousel-item">
-                    <img src="~/Images/beach_img_2.jpg" alt="Image of Bannner" />
-                </div>
-                <div class="carousel-item">
-                    <img src="~/Images/ocean.jpg" alt="Image of Bannner" />
-                </div>
-                <div class="carousel-item">
-                    <img src="~/Images/explored-hires.jpg" alt="Image of Banner" />
-                </div>
+@* Body *@
+<div class="banner">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/Images/beach_img_1.jpg" alt="Image of Bannner" />
             </div>
+            <div class="carousel-item">
+                <img src="~/Images/beach_img_2.jpg" alt="Image of Bannner" />
+            </div>
+            <div class="carousel-item">
+                <img src="~/Images/ocean.jpg" alt="Image of Bannner" />
+            </div>
+            <div class="carousel-item">
+                <img src="~/Images/explored-hires.jpg" alt="Image of Banner" />
+            </div>
+        </div>
 
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
 
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+
+    </div>
+</div>
+
+<div class="page-heading">
+    <div class="container-box">
+        <h2>TIN MỚI NHẤT</h2>
+    </div>
+
+    <div class="container-box">
+        <div class="popular-container">
+            @foreach (var itemContent in Model.NewsLatest)
+            {
+                <div class="box-wrap" itemprop="event" itemscope>
+                    <div class="img-wrap">
+                        <img src="@Url.Content(@itemContent.Img)" alt="courses picture" />
+                    </div>
+                    <a href="/ActivitiesNews/Content/@itemContent.id"
+                       class="learn-desining-banner"
+                       target="_blank">Xem ngay</a>
+                    <div class="box-body">
+                        <p>
+                            @itemContent.ShortDescription
+                        </p>
+                        <section>
+                            <p><span>Ngày:</span> @itemContent.CreateOn</p>
+                        </section>
+                    </div>
+                </div>
+            } 
+        </div>
+    </div>
+
+</div>
+
+<div class="page-heading">
+    <div class="container-box">
+        <h2>TIN XEM NHIỀU</h2>
+    </div>
+
+    <div class="container-box">
+        <div class="popular-container">
+
+            @foreach (var itemContent in Model.NewsHot)
+            {
+                <div class="box-wrap" itemprop="event" itemscope>
+                    <div class="img-wrap">
+                        <img src="@Url.Content(@itemContent.Img)" alt="courses picture" />
+                    </div>
+                    <a href="/ActivitiesNews/Content/@itemContent.id"
+                       class="learn-desining-banner"
+                       target="_blank">Xem ngay</a>
+                    <div class="box-body">
+                        <p>
+                            @itemContent.ShortDescription
+                        </p>
+                        <section>
+                            <p><span>Ngày:</span> @itemContent.CreateOn</p>
+                        </section>
+                    </div>
+                </div>
+            }
 
         </div>
     </div>
 
-    <div class="page-heading">
-        <div class="container-box">
-            <h2>TIN MỚI NHẤT</h2>
-        </div>
+</div>
 
-        <div class="container-box">
-            <div class="popular-container">
-
-                <div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-                    <div class="img-wrap">
-                        <img src="~/Images/s11.jpg" alt="courses picture" />
-                    </div>
-                    <a href="https://vov.gov.vn/ha-noi-nghien-cuu-xay-cong-ngam-o-song-to-lich-dtnew-146395"
-                       class="learn-desining-banner"
-                       target="_blank">Báo môi trường >>></a>
-
-                    <div class="box-body">
-                        <p>
-                            Hà Nội nghiên cứu xây cống ngầm ở sông Tô Lịch
-                            Gần 12 km cống dự kiến chạy ngầm dưới đáy sông sẽ dẫn nước thải về nhà máy Yên Xá để xử lý.
-                            Ngày 4/2, tại cuộc kiểm tra tiến độ dự án hệ thống xử lý nước thải Yên Xá
-                        </p>
-                        <section>
-                            <p><span>Ngày:</span> 02/06/2023</p>
-                        </section>
-                    </div>
-                </div>
-
-                <div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-                    <div class="img-wrap">
-                        <img src="~/Images/1111.jpg" alt="courses picture" />
-                    </div>
-                    <a href="#"
-                       class="learn-desining-banner"
-                       target="_blank">Báo môi trường >>></a>
-                    <div class="box-body">
-                        <p>
-                            Nước thải ô nhiễm đang khiến 2.000 con sông chết dần.
-                            Nước ta có khoảng hơn 2.000 con sông có chiều dài từ 10km trở lên, mang lại lợi thế rất lớn
-                            trong việc phát triển kinh tế - xã hội (KTXH). Nhiều con sông đang bị ô nhiễm nghiêm trọng
-                        </p>
-                        <section>
-                            <p><span>Ngày:</span> 03/05/2023</p>
-                        </section>
-                    </div>
-                </div>
-
-                <div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
-                    <div class="img-wrap">
-                        <img src="~/Images/s1.jpg" alt="courses picture" />
-                    </div>
-                    <a href="http://dwrm.gov.vn/index.php?language=vi&nv=news&op=Hoat-dong-cua-Cuc-Tin-lien-quan/Nuoc-thai-o-nhiem-dang-khien-2-000-con-song-chet-dan-7083"
-                       class="learn-desining-banner"
-                       target="_blank">Báo môi trường >>></a>
-
-                    <div class="box-body">
-                        <p>
-                            Sông Bắc Hưng Hải bị ô nhiễm nguồn nước nghiêm trọng.
-                            TTO - Bắc Hưng Hải tưới 110.000ha canh tác; cấp nước sinh hoạt cho hơn
-                            3 triệu người; tiêu nước, chống ngập úng cho toàn bộ diện tích 4 tỉnh,
-                            thành phố Hà Nội, Hưng Yên,Bắc Ninh và Hải Dương...
-                        </p>
-                        <section>
-                            <p><span>Ngày:</span> 21/09/2022</p>
-                        </section>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-    </div>
-     
-   
