--- a/Water_Environment/Views/Shared/_LayoutAdmin.cshtml
+++ b/Water_Environment/Views/Shared/_LayoutAdmin.cshtml
@@ -120,7 +120,7 @@
                                     <i class="fas fa-search fa-fw"></i>
                                 </a>
                                 <!-- Dropdown - Messages -->
-                                <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
+                                @*<div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
                                     <form class="form-inline mr-auto w-100 navbar-search">
                                         <div class="input-group">
                                             <input type="text" class="form-control bg-light border-0 small" placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="basic-addon2">
@@ -131,7 +131,7 @@
                                             </div>
                                         </div>
                                     </form>
-                                </div>
+                                </div>*@
                             </li>
                             <!-- Nav Item - User Information -->
                             @*@{
