--- a/Water_Environment/Views/Shared/_MasterLayout.cshtml
+++ b/Water_Environment/Views/Shared/_MasterLayout.cshtml
@@ -13,7 +13,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" rel="stylesheet" />
 
 
-    <link rel="stylesheet" href="~/Content/bootstrap-grid.min.css"/>
+    <link rel="stylesheet" href="~/Content/bootstrap-grid.min.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -38,7 +38,7 @@
 
 </head>
 <body>
-   
+
     @* Body *@
     <div>
 
@@ -59,13 +59,31 @@
                 </div>
 
                 <div class="box">
-                    <input type="text" placeholder="Search...">
-                    <a><i class='bx bx-search-alt-2 bx-tada'></i></a>
+                    @*<form action="/tim-kiem" method="get">*@
+                    <input type="text" placeholder="Search..." id="txtKeywork" name="keywork" />
+                    @*<input type="submit" value="" />*@
+                    <a href=""><i class='bx bx-search-alt-2 bx-tada'></i></a>
+                    @*</form>*@
+
                 </div>
 
                 <div class="head-right">
                     <div class="login-block">
-                        <a href="~/Login"><i class='bx bx-user-circle'></i></a>
+                        @if (@Session["UserLogined"]?.ToString() == "True")
+                        {
+                            <div style="text-align:center">
+                                <span style="color:wheat">Xin chào @Session["Username"]</span>
+                                <a href="~/Login">
+                                    <i class='bx bx-user-circle'></i>
+                                </a>
+                                <a href="~/Login/Logout"><i class="fa-solid fa-right-from-bracket"></i> </a>
+                            </div>
+
+                        }
+                        else
+                        {
+                            <a href="~/Login"> <i class="fa-solid fa-right-to-bracket"></i> </a>
+                        }
                     </div>
                 </div>
             </div>
@@ -166,9 +184,9 @@
         @* ------------------------------------------------------------------------------------------------- *@
     </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous">
-        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous">
+    </script>
 </body>
 </html>
