--- a/Water_Environment/Views/Register/Index.cshtml
+++ b/Water_Environment/Views/Register/Index.cshtml
@@ -10,8 +10,8 @@
 <div class="login">
     <img src="~/Images/eberhard-grossgasteiger-cs0sK0gzqCU-unsplash.jpg" alt="image" class="login__bg" />
 
-    <form action="/Login/Index"
-          id="LoginForm"
+    <form action="/Register/Index"
+          id="RegisterForm"
           class="login__form"
           method="post">
 
@@ -21,23 +21,32 @@
 
         @* Title *@
         @* ===================================================== *@
-        <h1 class="login__title" id="registerT">Register</h1>
+        <h1 class="login__title" id="registerT">Đăng ký tài khoản</h1>
         @* ===================================================== *@
         @Html.AntiForgeryToken()
         <div class="login__inputs">
-            @* Email *@
+            @* Username *@
             <div class="login__box">
                 <input type="text"
-                       placeholder="Email" required
+                       placeholder="Tài khoản" required
                        class="login__input"
                        id="username"
                        name="Username" />
                 <i class="ri-mail-fill"></i>
             </div>
+            @* Email *@
+            <div class="login__box">
+                <input type="email"
+                       placeholder="Email" required
+                       class="login__input"
+                       id="email"
+                       name="Email" />
+                <i class="ri-mail-fill"></i>
+            </div>
             @* Password *@
             <div class="login__box" id="Psw">
                 <input type="password"
-                       placeholder="Password" required
+                       placeholder="Mật khẩu" required
                        name="Password"
                        class="login__input"
                        id="password" />
@@ -50,7 +59,7 @@
             @* Confirmed Password *@
             <div class="login__box" id="confirmPsw">
                 <input type="password"
-                       placeholder="Confirm Password" required
+                       placeholder="Xác nhận mật khẩu" required
                        class="login__input"
                        id="Cpassword" />
                 <div class="cont-icon">
@@ -61,26 +70,17 @@
             </div>
         </div>
 
-        <div class="login__check">
-            @* Remember me *@
-            <div class="login__check-box">
-                <input type="checkbox" class="login__check-input" id="user-check" />
-                <label for="user-check" class="login__check-label">Remember me</label>
-            </div>
-            @* Forgot Password *@
-            <a href="#" class="login__forgot">Forgot Password?</a>
-        </div>
-
         @* Button Register *@
         @* ========================================================== *@
-        <button type="button" class="login__button" id="registerB" onclick="RegisterForm()">Register</button>
+        <button type="button" class="login__button" id="registerB" onclick="RegisterForm()">Đăng ký</button>
+        @Html.ValidationSummary(false, "", new { @class = "text-danger " })
         @* =========================================================== *@
 
         @* Move to Login page *@
         @* ========================================================== *@
         <div class="login__register" id="login__login">
-            You have an account?
-            <a href="/Login/index" id="login">Login</a>
+            Bạn đã có tài khoản?
+            <a href="/Login/index" id="login">Đăng nhập</a>
         </div>
         @* ========================================================== *@
     </form>
@@ -89,30 +89,22 @@
 <script>
     function RegisterForm() {
         var username = document.getElementById("username").value;
+        var email = document.getElementById("email").value;
         var password = document.getElementById("password").value;
         var Cpassword = document.getElementById("Cpassword").value;
 
-        if (username === "" || password === "" || Cpassword === "") {
-            alert("Fill in blank..!");
+        if (username === "" || email === "" || password === "" || Cpassword === "") {
+            alert("Yêu cầu điền đầy đủ thông tin!");
         }
         else if (password.length < 8) {
-            alert("At least 8 characters!");
-        }
-        else if (!/[A-Z]/.test(password)) {
-            alert("At least a upper letter!");
-        }
-        else if (!/[a-z]/.test(password)) {
-            alert("At least a lower letter!");
-        }
-        else if (!/\d/.test(password)) {
-            alert("At least a number");
+            alert("Mật khẩu cầu ít nhất 8 kí tự!");
         }
         else if (password !== Cpassword) {
-            alert("Password not the same..!")
+            alert("Mật khẩu xác nhận không giống mật khẩu đăng ký!")
         }
         else {
             //window.location.href = "#";
-            var form = document.getElementById("LoginForm");
+            var form = document.getElementById("RegisterForm");
             form.submit();
         }
     }
